<resources>
    <string name="app_name">Turing Parking</string>

    <!-- Strings do MainView -->
    <string name="turing_parking">Turing Parking</string>
    <string name="login_button">Faça o Login</string>
    <string name="facebook_button">Conecte com o Facebook</string>
    <string name="register_button">Não tem uma conta? Cadastre-se!</string>
    <string name="turing_icon_content">Turing Icon</string>
    <string name="facebook_toast">Função ainda não implementada!</string>

    <!-- Strings do LoginView -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_code">Código</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_message">Bem Vindo de Volta!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Encontre uma Vaga</string>
    <string name="menu_promo">Indique e Ganhe</string>
    <string name="menu_history">Historico de Vagas</string>
    <string name="menu_about">Sobre nós</string>
    <string name="menu_add">Adicione seu Estacionamento</string>
    <string name="menu_exit">Sair do App</string>
    <string name="menu_cars">Meus Carros</string>
    <string name="menu_wallet">Carteira</string>
    <string name="menu_park">Seus Estacionamentos</string>
    <string name="menu_finance">Relatório financeiro</string>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="icone_do_app">Icone do app</string>
    <string name="register_text">Registre-se em nosso App e não perca mais tempo procurando vagas!</string>
    <string name="prompt_password_confirm">Confirme sua Senha</string>
    <string name="register_btn">Registrar</string>

    <string-array name="types_array">
        <item>Carro</item>
        <item>SUV</item>
        <item>Picape</item>
    </string-array>

    <string-array name="languages_array">
        <item>Português</item>
        <item>Inglês</item>
        <item>Alemão</item>
    </string-array>

    <string-array name="colors_array">
        <item>Preto</item>
        <item>Branco</item>
        <item>Prata</item>
        <item>Cinza</item>
        <item>Vermelho</item>
        <item>Azul</item>
        <item>Verde</item>
        <item>Amarelo</item>
        <item>Marrom</item>
        <item>Outras</item>
    </string-array>

    <string name="transCredit">transaction credit</string>
    <string name="transSpent">transaction debit</string>
    <string name="transIncome">transaction income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_account">Perfil</string>

</resources>