<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_cars_list"
            android:icon="@drawable/ic_cars"
            android:title="@string/menu_cars" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_stops"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_giftcard"
            android:title="@string/menu_promo" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_exit" />
    </group>
</menu>