<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_park"
            android:icon="@drawable/ic_local_parking"
            android:title="@string/menu_park" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_location"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_money"
            android:title="@string/menu_finance" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_exit" />
    </group>
</menu>