<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.turingparking.fragments.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_indique"
        android:name="com.example.turingparking.fragments.PromoFragment"
        android:label="@string/menu_indique"
        tools:layout="@layout/fragment_promo" />

    <fragment
        android:id="@+id/nav_historico"
        android:name="com.example.turingparking.fragments.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.turingparking.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.turingparking.fragments.AboutFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.turingparking.fragments.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>