<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.turingparking.user_fragments.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.turingparking.user_fragments.AccountFragment"
        android:label="Cadastro"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_avatar"
        android:name="com.example.turingparking.user_fragments.SelectAvatarFragment"
        android:label="Selecione seu Avatar"
        tools:layout="@layout/fragment_select_avatar" />

    <fragment
        android:id="@+id/nav_cars_list"
        android:name="com.example.turingparking.user_fragments.CarListFragment"
        android:label="Meus Carros"
        tools:layout="@layout/fragment_car_list" >
        <action
            android:id="@+id/action_nav_cars_list_to_nav_cars"
            app:destination="@id/nav_add_cars" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_cars"
        android:name="com.example.turingparking.user_fragments.AddCarFragment"
        android:label="Cadastro de Carro"
        tools:layout="@layout/fragment_add_car" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.turingparking.user_fragments.WalletFragment"
        android:label="Seu Extrato"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_pix"
        android:name="com.example.turingparking.user_fragments.AddPixFragment"
        android:label="Adicione um PIX"
        tools:layout="@layout/fragment_add_pix" />

    <fragment
        android:id="@+id/nav_promo"
        android:name="com.example.turingparking.user_fragments.PromoFragment"
        android:label="@string/menu_promo"
        tools:layout="@layout/fragment_promo" />

    <fragment
        android:id="@+id/nav_stops"
        android:name="com.example.turingparking.user_fragments.StopsHistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history_list" />

    <fragment
        android:id="@+id/nav_spots_details"
        android:name="com.example.turingparking.user_fragments.StopHistoryDetailFragment"
        tools:layout="@layout/fragment_stop_history_detail" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.turingparking.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.turingparking.fragments.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>