<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_container"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/turingIcon"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_turing_parking_nome_lg"
        android:contentDescription="@string/turing_icon_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turingIcon"
        app:layout_constraintVertical_bias="0.800">

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_margin="8dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/google_button"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_margin="8dp"
            android:drawableEnd="@drawable/google_icon"
            android:text="Conecte-se com o Google" />

        <Button
            android:id="@+id/register_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_margin="8dp"
            android:background="@color/transparent"
            android:text="@string/register_button" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>